<resources>
    <string name="app_name">MovieTvShow4</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="title_movie">MOVIES</string>
    <string name="title_tvShow">TV SHOWS</string>
    <string name="title_movie_favorite">MOVIES FAVORITE</string>
    <string name="title_tvShow_favorite">TV SHOWS FAVORITE</string>
    <string name="title_favorite">FAVORITE</string>
    <string name="change_setting">Change Language</string>

    <string name="title_movies_actionbar">MOVIE</string>
    <string name="title_tvShow_actionbar">TV SHOW</string>
    <string name="movie_detail_overview">Movie Overview</string>
    <string name="movie_detail_release_date">Movie Release Date</string>
    <string name="movie_detail_language">Movie Language</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="tvShow_detail_overview">TvShow Overview</string>

    <string name="language_movie">Language Movie</string>
    <string name="popular_movie">Popularity Movie</string>
    <string name="poster_tvShow">Poster TvShow</string>
    <string name="tvShow_detail_release_date">TvShow Release Date</string>
    <string name="popular_tvShow">Popularity TvShow</string>
    <string name="language_tvShow">Language TvShow</string>
    <string name="delete_from_favorite">Delete From Favorite</string>
    <string name="notify_question_delete">Are you sure you want to remove this from favorite list?</string>
    <string name="notify_delete_movie">Delete this Movie</string>
    <string name="notify_delete_tvShow">Delete this TvShow</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notify_failed_delete_data">Delete item failed</string>
    <string name="remove_from_favorite">Remove From Favorite</string>

</resources>
