<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:iconTint="@color/orange"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_show_tv"
        android:iconTint="@color/orange"
        android:title="@string/title_tvShow" />

    <item
        android:id="@+id/navigation_movie_favorite"
        android:icon="@drawable/ic_movie"
        android:iconTint="@color/orange"
        android:title="@string/title_movie_favorite" />

    <item
        android:id="@+id/navigation_tvshow_favorite"
        android:icon="@drawable/ic_show_tv"
        android:iconTint="@color/orange"
        android:title="@string/title_tvShow_favorite" />
</menu>